[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoagent"
version = "0.1.6"
authors = [
    {name = "Frank Lin", email = "etrobot@outlook.com"},
]
description = "A micro Re-Act Agent Framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/nanoagent"
"Bug Tracker" = "https://github.com/yourusername/nanoagent/issues"

[tool.setuptools]
package-dir = {""= "."}

[tool.setuptools.packages.find]
where = ["."] 