[metadata]
name = nanoagent
version = 0.1.1
author = Frank Lin
author_email = etrobot@outlook.com
description = A micro Re-Act Agent Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/etrobot/nanoagent
project_urls =
    Bug Tracker = https://github.com/etrobot/nanoagent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    openai>=1.0.0
    tiktoken>=0.5.0

[options.packages.find]
where = . 